--- a/src/components/dashboard/registerForm/registerFormTabs/automation/PFComponent/PFComponentStyles.css
+++ b/src/components/dashboard/registerForm/registerFormTabs/automation/PFComponent/PFComponentStyles.css
@@ -37,12 +37,23 @@ p::before {
 input {
   display: block;
   box-sizing: border-box;
-  /* width: 100%;
- border-radius: 4px;
- border: 1px solid white;
- padding: 10px 15px;
- margin-bottom: 10px;
- font-size: 14px; */
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid white;
+  padding: 10px 15px;
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+
+label {
+  line-height: 2;
+  text-align: left;
+  display: block;
+  margin-bottom: 13px;
+  margin-top: 20px;
+  color: white;
+  font-size: 14px;
+  font-weight: 200;
 }
 
 button[type="submit"],
@@ -136,22 +147,4 @@ button {
   flex: 1;
   padding: 10px;
   margin: auto;
-}
-
-.select-comp {
-  flex: 1;
-  padding: 10px;
-  margin: auto;
-}
-
-label {
-  line-height: 2;
-  text-align: left;
-  display: block;
-  margin-bottom: 13px;
-  margin-top: 20px;
-  color: white;
-  font-size: 14px;
-  font-weight: 200;
-  flex: 1;
 }
