Multipart upload functionality

--- a/src/components/dashboard/dataUpload/styles.css
+++ b/src/components/dashboard/dataUpload/styles.css
@@ -113,6 +113,7 @@ div.container > label {
 }
 
 button[type="button"] {
+  width: 50px;
   display: block;
   appearance: none;
   background: transparent;
