--- a/src/components/dashboard/tabularView/styles.css
+++ b/src/components/dashboard/tabularView/styles.css
@@ -1,3 +1,41 @@
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.root {  
+  width: 80vw;
+  height: 80vh;
+  border: 0px;
+  box-shadow: none;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
+.tableContainer {
+ max-height: 500px;
+
+}
+
+.table {
+  width: 100%;
+  height: 100%;
+  border: 0px;
+  box-shadow: none;
+  overflow: hidden;
+  overflow-y: scroll;
+  overflow-x: scroll;
+}
+
+.tableCell{
+  table-layout: auto;
+  width: 100px;
+}
+
 p::before{
  visibility: hidden;
 }
