--- a/src/components/dashboard/registerForm/registerFormTabs/automation/PFComponent/PFComponentStyles.css
+++ b/src/components/dashboard/registerForm/registerFormTabs/automation/PFComponent/PFComponentStyles.css
@@ -58,7 +58,8 @@ label {
 
 button[type="submit"],
 input[type="submit"] {
-  background: #ec5990;
+  background: #4e46f1;
+  opacity: 0.9;
   color: white;
   text-transform: uppercase;
   border: none;
@@ -71,7 +72,8 @@ input[type="submit"] {
 
 button[type="submit"]:hover,
 input[type="submit"]:hover {
-  background: #bf1650;
+  background: #4e46f1;
+  opacity: 1;
 }
 
 button[type="submit"]:active,
