--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 @import "~normalize.css";
 @import "~@blueprintjs/core/lib/css/blueprint.css";
 @import "~@blueprintjs/icons/lib/css/blueprint-icons.css";
+@import "~@fortawesome/fontawesome-free/css/all.css";
+@import "~@blueprintjs/popover2/lib/css/blueprint-popover2.css";
+
 
 *:focus {
-  outline: none;
+    outline: none;
 }
