--- a/src/atomic/molecules/metrics/metrics.module.css
+++ b/src/atomic/molecules/metrics/metrics.module.css
@@ -21,7 +21,7 @@
   justify-content: end;
   font-weight: 600;
   font-size: 1.2rem;
-  margin: 0.7rem 0rem
+  margin: 0.7rem 0
 }
 
 .tag {
@@ -38,4 +38,12 @@
 .divider {
   margin-left: 0 !important;
   margin-right: 0 !important;
+}
+
+.metricsContainer {
+  display: flex;
+  margin-bottom: 2rem;
+  margin-left: 2.7em;
+  margin-right: 2.7em;
+  justify-content: flex-start;
 }
