fix: table column widths and styling
 - added slim scroll bar

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 @import "~@blueprintjs/select/lib/css/blueprint-select.css";
 @import "~@blueprintjs/datetime/lib/css/blueprint-datetime.css";
 @import "~@blueprintjs/datetime2/lib/css/blueprint-datetime2.css";
+@import '~react-perfect-scrollbar/dist/css/styles.css';
 
 
 
